2002-01-06  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: save the colors as hex values

	* callbacks.c, procdialogs.c: same here

	* procman.schemas: update to new gconf values. If udating
	make sure to reinstall the schemas file or you are 
	screwed ;)

2002-01-02  Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c: when hiding or reshowing a processes make sure
	to do that on all processes of the same name

	* interface.c: let the devices treeview scroll in the horizontal
	direction

2001-12-30  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't remove items from tree that aren't
	visible

2001-12-30  Kevin Vandersloot <kfv101@psu.edu>

	* finish up the gconf stuff

	* procdialog.c: no longer connect to the focus out signal
	for the spin buttons since that seems to be unrelliable. Use
	a button instead

2001-12-30  Kevin Vandersloot <kfv101@psu.edu>

	* clean up gconfclient usage by including the client in
	the procdata structure

	* procman.c, interface.c: remove debug spewage about timings

2001-12-13  Kevin Vandersloot <kfv101@psu.edu>

	* procman.schemas: create gconf schemas file

	* Makefile.am: install schemas file

	* procman.c, proctable.c: get rid of my custom default handling now that
	we have a schemas file.

2001-12-11  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: get rid of deprecated gnome_datadir_file

	* procdialogs.c: port the root dialog to gtk_dialog. Procman
	is now 100% pure GNOME 2.0. Also indicate the nice level 
	of the selected process initially in the renice dialog.

	* Makefile.am: add GNOME_DISABLE_DEPRECATED

2001-12-11  Kevin Vandersloot <kfv101@psu.edu>

	* compile with GTK_DISABLE_DEPRECATED. Also remove all
	gnome_dialogs except for the root stuff

2001-12-07  Alexander Larsson  <alla@lysator.liu.se>

	* src/interface.c:
	Make window and upper part of system view not shrinkable.

2001-12-03  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: unref the tmp_pixbuf to plug leak

	* memmaps.c: fix mem leaks
