@@ -1,3 +1,9 @@
+2002-01-07  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c: add options to show or not the warning dialogs
+	when hiding/killing processes in the prefs dialog. Also some
+	ui cleanups of the dialog
+
 2002-01-06  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.c: save the colors as hex values
